My Changes - fixed minor buges - fixed templates spacing and fonts

--- a/assets/scss/_partials/_variables.scss
+++ b/assets/scss/_partials/_variables.scss
@@ -3,5 +3,5 @@ $dftfont: monospace;
 $feature--margin: 5px;
 $head--size: 20px;
 $head--color: rgb(42, 42, 42);
-$article--color: rgb(53, 52, 52);
+$article--color: rgb(95, 93, 93);
 $article--items--color: rgb(163, 162, 162);
