--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -3,16 +3,17 @@
 *{
     margin: 0px;
     padding: 0px;
-    font-family: $dftfont;
-    width: 100%;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 // HEADER--SECTION
 
 .head{
-    margin: 20px;
+    margin: auto;
     display: flex;
     justify-content: space-between;
+    width: 83%;
+    padding: 20px;
     .head__logo{
         margin-left: 150px;
         color: black;
@@ -63,6 +64,7 @@
     }
 }
 
+// HEADER--SECTION--END
 
 // FEATURE--SECTION
 
@@ -74,15 +76,14 @@
         height: 100%;
         .block{
             background-color: rgb(158, 146, 158);
-            height: 50%;
+            height: 49%;
         }
         .blocks__a{
-            margin: 0px $feature--margin $feature--margin*2 0px;
+            margin: 0px 0px 11px 0px;
             background: url(https://www.oliverstravels.com/blog/wp-content/uploads/2018/03/Travelling-with-baby-header.jpg) center no-repeat;
             background-size: cover;
         }
         .blocks__b{
-            margin: 0px $feature--margin 0px 0px;
             background: url(https://static.twentyoverten.com/5c0ac1006ab0ca459fa80cf5/E1P6wu6nNi/iStock-491963574.jpg) center no-repeat;
             background-size: cover;
         }
@@ -106,11 +107,11 @@
         justify-content: center;
 
         .middle__box {
-            width: 90%;
+            width: 80%;
             background-color: rgba(0, 0, 0, 0.3);
             color: white ;
             text-align: center;
-            padding: 20px 15px;
+            padding: 40px 15px;
 
             .heading {
                 text-transform: uppercase;
@@ -118,11 +119,13 @@
                 font-size: 35px !important;
             }
             .btn-read{
-                background-color: rgba(0, 0, 0, 0.3);
+                background-color: rgba(0, 0, 0, 0);
+                text-transform: uppercase;
                 color: white ;
                 cursor: pointer;
+                font-weight: 600;
                 margin-top: 20px;
-                font-size: 25px;
+                font-size: 22px;
                 border: none;
             }
             
@@ -144,6 +147,8 @@
             flex-direction: row;
             .block{
                 height: 100%;
+                width: 49%;
+                margin: 5px;
             }
         }
         .feature__middle{
@@ -172,6 +177,7 @@
 
 }
 
+// FEATURE--SECTION--END
 
 
 
@@ -190,7 +196,7 @@
             text-align: center;
             font-weight: bold;
             font-size: $head--size*1.7;
-            margin-bottom: 25px;
+            margin-bottom: -10px;
         }
     }
 
@@ -199,6 +205,7 @@
         flex-direction: row;
         align-items: center;
         width: 100%;
+        margin-top: 40px;
 
         .article__col{
             height: 100%;
@@ -221,7 +228,7 @@
             }
 
             .article__heading{
-                margin: 30px 0px $feature--margin $feature--margin;
+                margin: 30px 0px $feature--margin*2 $feature--margin;
                 font-size: $head--size;
                 color:  $article--color;
                 font-weight: 550;
@@ -229,36 +236,49 @@
             
             .aricle__dateandtime{
                 margin: $feature--margin;
-                margin-top: -5px;
+                margin-top: 0px;
                 color: $article--items--color;
             }
 
             .article__desc{
                 color: $article--items--color;
                 margin: $feature--margin;
-                font-weight: 900;
+                margin-top: 20px;
+                font-weight: 550;
+                line-height: 25px;
             }
 
             .article__continue{
                 text-transform: uppercase;
-                margin: $feature--margin*2 0px;
+                margin: $feature--margin*4 0px;
                 cursor: pointer;
                 display: inline;
-                color: $article--items--color;
+                font-weight: 600;
+                color: rgb(141, 141, 141);
+                font-size: 15px;
+            }
+
+            hr{
+                height:1px;
+                border-width:0;
+                background-color:rgb(226, 223, 223);
             }
 
             .article__comment{
                 display: flex;
-                flex-direction: row;
-                .cmnt__icn{
-                    background: url(https://static.thenounproject.com/png/638755-200.png) center no-repeat;
-                    height: 100px;
-                    background-size: cover;
-                }
+                flex-direction: row-reverse;
+                justify-content: start;
                 .comment__number{
                     color: $article--items--color;
                     margin: $feature--margin*4 $feature--margin;
-                    font-weight: 600;
+                    font-weight: 500;
+                }
+                .comment__icon{
+                    background: url(https://static.thenounproject.com/png/638755-200.png) center no-repeat;
+                    background-size: cover;
+                    width: 15px;
+                    height: 22px;
+                    margin-top: 15px;
                 }
             }
         }
@@ -294,6 +314,8 @@
     }
 }
 
+//RECENT--ARTICLE--SECTION--END
+
 
 
 // FOOTER--IMAGES
@@ -327,6 +349,8 @@
         }
     }
 }
+// FOOTER--IMAGES--END
+
 
 // FOOTER--SECTION
 .foot{
@@ -334,11 +358,18 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
+    padding: 30px;
 
     .foot__text{
-        font-size: 12px;
-        color: rgb(224, 223, 221);
+        font-size: 20px;
+        color: rgb(87, 87, 87);
+        margin: auto;
+        width: 45%;
+    }
+
+    .foot__nav{
+        margin: auto;
+        width: 20%;
     }
 
     ul{
@@ -346,6 +377,8 @@
         display: flex;
         flex-direction: row;
         font-family: monospace;
+        margin: auto;
+        width: 10%;
 
         a{
             color: darkgrey;
@@ -378,4 +411,17 @@
             }
         }
     }
+}
+// FOOTER--SECTION--END
+
+
+.myBtn {
+    position: fixed;
+    bottom: 10px;
+    float: right;
+    right: 1%;
+    max-width: 52px;
+    width: 100%;
+    font-size: 20px;
+    background-color: #c6c5c5;
 }
